# rag-system

./: README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.local.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3125258aa5fa_initial_schema.py  6365d69593ff_.py  9e870b57e12d_add_username_unique_constraint.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: auth.py  chat.py  conversations.py  documents.py  health.py
backend/app/core/: exceptions.py  limiter.py  logging.py  openai.py
backend/app/models/: __init__.py  base.py  conversation.py  document.py  user.py
backend/app/schemas/: auth.py  chat.py  conversation.py  document.py
backend/app/services/: auth.py  chunking.py  conversation.py  document.py  embedding.py  rag.py
backend/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.prod.yml
backend/scripts/: check_unused_functions.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_chunking.py  test_conversations.py  test_documents.py  test_embedding.py  test_health.py
backend/tests/integration/: conftest.py  test_vector_search.py
frontend/: .cta.json  .gitignore  README.md  biome.json  package.json  vite.config.ts  vitest.config.ts
frontend/scripts/: check-unused-exports.ts
frontend/src/: routeTree.gen.ts  router.tsx  styles.css
frontend/src/components/: Header.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatView.tsx  ConversationList.tsx  MarkdownRenderer.tsx  SourceCard.tsx  StreamingMessage.tsx  index.ts
frontend/src/components/common/: EmptyState.tsx  ErrorDisplay.tsx  LoadingSpinner.tsx  index.ts
frontend/src/components/documents/: DocumentCard.tsx
frontend/src/components/layout/: AppLayout.tsx  AuthCard.tsx  AuthLayout.tsx  Sidebar.tsx  index.ts
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  separator.tsx  skeleton.tsx  text-field.tsx  tooltip.tsx
frontend/src/contexts/: auth.tsx
frontend/src/integrations/tanstack-query/: provider.tsx
frontend/src/lib/: api.ts  constants.ts  schemas.ts  sse.ts
frontend/src/lib/__tests__/: api.test.ts  sse.test.ts
frontend/src/routes/: __root.tsx  _authed.tsx  index.tsx  login.tsx  register.tsx
frontend/src/routes/_authed/: chat.tsx  documents.tsx
frontend/src/routes/_authed/chat/: $chatId.tsx  index.tsx
frontend/src/routes/_authed/documents/: $id.tsx  index.tsx  upload.tsx
frontend/src/stores/: chat.ts
frontend/src/stores/__tests__/: chat.test.ts
frontend/src/types/: api.ts  auth.ts  chat.ts  conversation.ts  document.ts
